--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,14 @@ body {
     position: absolute;
 }
 
+.apple::before {
+    content: "|";
+    position: absolute;
+    left: 50%;
+    bottom: 100%;
+    transform: translate(-50%, 60%);
+}
+
 #snake-vertical-top {
     flex-direction: column;
 }
